--- a/index.html
+++ b/index.html
@@ -198,6 +198,213 @@
         </div>
       </div>
       <!-- End stuff -->
+      <!-- Start Meet the team -->
+        <div class="team text-center pb-5 pt-5">
+          <div class="container pb-5 pt-5">
+             <h2 class="fw-bold">Meet The Team</h2>
+             <p class="text-black-50 mb-5 m-auto">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate tempore repellat iste temporibus vero facere obcaecati expedita inventore libero itaque possimus, officiis commodi. In maxime iure, tempora possimus atque veniam?
+             </p>
+             <div class="row">
+              <div class="col-md-6 col-lg-3">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-1.png" alt="">
+                  <h4 class="p-3 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-3">"I don't understand how we got by those troops. I thought we were dead."</blockquote>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-2.png" alt="">
+                  <h4 class="p-3 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-3">"I don't understand how we got by those troops. I thought we were dead."</blockquote>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-3.png" alt="">
+                  <h4 class="p-3 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-3">"I don't understand how we got by those troops. I thought we were dead."</blockquote>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-4.png" alt="">
+                  <h4 class="p-3 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-3">"I don't understand how we got by those troops. I thought we were dead."</blockquote>
+                </div>
+              </div>
+             </div>
+
+          </div>
+        </div>
+      <!-- End Meet the team -->
+      <!-- Start techs -->
+      <div class="techs pb-5 pt-5 text-center">
+        <div class="container">
+          <div class="row align-items-center">
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-1.png" alt="tech1-problem"> 
+             </div>
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-2.png" alt="tech1-problem"> 
+             </div>
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-3.png" alt="tech1-problem"> 
+             </div>
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-1.png" alt="tech1-problem"> 
+             </div>
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-2.png" alt="tech1-problem"> 
+             </div>
+             <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+              <img class="img-fluid" src="imgs/tech-4.png" alt="tech1-problem"> 
+             </div>
+          </div>
+        </div>
+      </div>
+      <!-- End techs -->
+      <!-- Start Project -->
+      <div class="project text-center pb-5 pt-5 text-light">
+         <h2>Start Your Project Now</h2>
+         <p class="text-white-50 w-75 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci magnam dolorum repudiandae reiciendis ipsum. In.</p>
+         <div class="d-flex justify-content-center mt-5 mb-5">
+          <a class="btn  rounded-pill main-btn text-uppercase" href="#">Start Project</a>
+        </div>
+      </div>
+      <!-- End Project -->
+      <!-- start blog -->
+      <div class="blog pb-5 pt-5">
+        <div class="container">
+          <div class="main-title text-center mt-5 mb-5 position-relative">
+            <img class="mb-4" src="imgs/title.png" alt="image-title-probem">
+            <h2>Read Our Blog</h2>
+            <p class="text-black-50">NEW STORIES</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-6">
+              <div class="card">
+                <img class="img-fluid" src="imgs/blog-1.jpg" alt="blog-image-problem">
+             <div class="card-body">
+                <span>April 17.2022</span>
+                <h4 class="fw-bold">Some Awesome Blog Title Here</h4>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="card">
+                <img class="img-fluid" src="imgs/blog-2.jpg" alt="blog-image-problem">
+               <div class="card-body">
+                <span>April 17.2022</span>
+                <h4 class="fw-bold">Some Awesome Blog Title Here</h4>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="card">
+                <img class="img-fluid" src="imgs/blog-3.jpg" alt="blog-image-problem">
+               <div class="card-body">
+                <span class="text-black-50">April 17.2022</span>
+                <h4 class="fw-bold">Some Awesome Blog Title Here</h4>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="d-flex justify-content-center mt-5 mb-5">
+            <a class="btn  rounded-pill main-btn text-uppercase" href="#">Read More Stories</a>
+          </div>
+        </div>
+      </div>
+      <!-- End blog -->
+      <!-- Start Subcribetion -->
+      <div class="subscribe pb-5 pt-5 text-center text-md-start">
+        <div class="container">
+          <form class="row align-items-center">
+           <div class="col-md-6 col-lg-3">
+             <div class="fw-bold fs-5 mb-3">Subscribe to our Newsletter:</div>
+
+           </div>
+           <div class="col-md-6 col-lg-7 mb-3">
+            <input class="w-100 text-light bg-transparent p-2" type="text" placeholder="Enter email Address">
+           </div>
+           <div class="col-md-6 col-lg-2">
+              <input type="submit" value="Subscribe" class="btn rounded-pill">
+           </div>
+          </form>
+        </div>
+      </div>
+      <!-- End Subcribetion -->
+      <!-- Start Footer -->
+      <div class="footer pb-5 pt-5 text-white-50 text-md-start text-center">
+        <div class="container">
+           <div class="row">
+            <div class="col-md-6 col-lg-4">
+              <div class="info mb-5">
+                <img class="img-fluid mb-4" src="imgs/logo.png" alt="logo-problem">
+                <p class="mb-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. molestias vitae dolores soluta!</p>
+              </div>
+              <div class="copyright mb-5">
+                Created By <span>Mohamed</span> 
+                <div>&copy; 2023 - <span>Bondi Inc</span></div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-2">
+              <div class="links">
+                <h5 class="text-light">Links</h5>
+                <ul class="list-unstyled lh-lg">
+                    <li>Home</li>
+                    <li>Our Services</li>
+                    <li>Portfolio</li>
+                    <li>Testmonials</li>
+                    <li>Support</li>
+                    <li>Terms and Conditions</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-2">
+              <div class="links">
+                <h5 class="text-light">Links</h5>
+                <ul class="list-unstyled lh-lg">
+                    <li>Home</li>
+                    <li>Our Services</li>
+                    <li>Portfolio</li>
+                    <li>Testmonials</li>
+                    <li>Support</li>
+                    <li>Terms and Conditions</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="contact">
+                <h5 class="text-light">Contact Us</h5>
+                <p class="lh-lg w-100  w-sm-75 mx-sm-auto mt-3 mb-5">
+                 Get in touch wiht us via mail phone. We are waiting for your call or message 
+                </p>
+                <div class="d-flex justify-content-center mt-5">
+                  <a class="btn  rounded-pill main-btn w-100" href="#">mohamed@gmail.com</a>
+                </div>
+                <ul class=" d-flex justify-content-center gap-3 list-unstyled p-5">
+                  <li><a class="d-block text-light" href="#">
+                    <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i>
+                  </a></li>
+                  <li><a class="d-block text-light" href="#">
+                    <i class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i>
+                  </a></li>
+                  <li><a class="d-block text-light" href="#">
+                    <i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i>
+                  </a></li>
+                  <li><a class="d-block text-light" href="#">
+                    <i class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i>
+                  </a></li>
+                </ul>
+              </div>
+            </div>
+
+           </div>
+        </div>
+      </div>
+      <!-- End Footer -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
 </body>
